--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1753,3 +1753,11 @@ msgstr ""
 msgctxt "#90109"
 msgid "Includes uncategorized or unidentified sources"
 msgstr ""
+
+msgctxt "#90110"
+msgid "Do you want to clear your watched history?."
+msgstr ""
+
+msgctxt "#90111"
+msgid "Do you want to clear this history?."
+msgstr ""
