--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -112,12 +112,12 @@ msgid "Cache expiration hours"
 msgstr "Expiracion de Cache"
 
 msgctxt "#30106"
-msgid "Clear cache"
-msgstr "Borrar la cache"
+msgid "Clear Cache"
+msgstr "Borrar la Cache"
 
 msgctxt "#30107"
-msgid "Enable cache"
-msgstr "Habilitar cache"
+msgid "Enable Cache"
+msgstr "Habilitar Cache"
 
 msgctxt "#30140"
 msgid "AniList"
@@ -1743,5 +1743,17 @@ msgid "Do you want to clear your watched history?."
 msgstr "¿Quieres borrar tu historial de vistos?"
 
 msgctxt "#90111"
-msgid "Do you want to clear this history?."
-msgstr "¿Quieres borrar este historial?"
+msgid "Do you want to clear your history?."
+msgstr "¿Quieres borrar tu historial?"
+
+msgctxt "#90112"
+msgid "Clear History"
+msgstr "Borrar Historial"
+
+msgctxt "#90113"
+msgid "Click to delete all watched history immediately."
+msgstr "Click para borrar todo tu historial inmediatamente"
+
+msgctxt "#90114"
+msgid "History cleared"
+msgstr "Historial borrado"
