feat(stremio/ui): add Rutor provider and localized title for Torrentio provider selection

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1781,3 +1781,7 @@ msgstr ""
 msgctxt "#90116"
 msgid "Open Settings"
 msgstr ""
+
+msgctxt "#90117"
+msgid "Select Torrentio Providers"
+msgstr ""
