feat: add AllDebrid support - Fix RealDebrid episodes match not reliable. - Moved debrid helper modules to lib/clients/debrid namespace for better organization

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1797,3 +1797,7 @@ msgstr ""
 msgctxt "#90120"
 msgid "Prowlarr port (default:9696)"
 msgstr ""
+
+msgctxt "#90121"
+msgid "All Debrid Configuration"
+msgstr ""
