feat(stremio): add  timeout setting for Stremio requests

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1805,3 +1805,7 @@ msgstr ""
 msgctxt "#90122"
 msgid "Automatically download subtitles"
 msgstr ""
+
+msgctxt "#90123"
+msgid "Stremio Timeout"
+msgstr ""
