feat(webdav): add WebDAV client integration with browsing and playback support
- Add WebDAV API client with PROPFIND directory listing
- Detect file types (video, audio, image, text) by extension
- Support authenticated URLs for direct playback
- Add Kodi UI integration for:
  - Folder navigation
  - Video and audio playback
  - Image preview
  - Text file viewer
- Add WebDAV provider entry in Cloud section
- Add connection test action in settings
- Add WebDAV configuration settings (host, port, credentials, remote path)
- Add English and Spanish translations for WebDAV settings
- Register WebDAV routes in addon router

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1809,3 +1809,51 @@ msgstr ""
 msgctxt "#90123"
 msgid "Stremio Timeout"
 msgstr ""
+
+msgctxt "#90124"
+msgid "Webdav Client Configuration"
+msgstr ""
+
+msgctxt "#90126"
+msgid "Host"
+msgstr ""
+
+msgctxt "#90127"
+msgid "Username"
+msgstr ""
+
+msgctxt "#90128"
+msgid "Password"
+msgstr ""
+
+msgctxt "#90129"
+msgid "Test Connection"
+msgstr ""
+
+msgctxt "#90131"
+msgid "Webdav"
+msgstr ""
+
+msgctxt "#90132"
+msgid "Remote Path"
+msgstr ""
+
+msgctxt "#90133"
+msgid "The hostname or IP address of your WebDAV server (e.g., http://mywebdav.com or https://192.168.1.100)."
+msgstr ""
+
+msgctxt "#90134"
+msgid "The username required for authenticating with your WebDAV server"
+msgstr ""
+
+msgctxt "#90135"
+msgid "The password for the specified username to authenticate with your WebDAV server"
+msgstr ""
+
+msgctxt "#90136"
+msgid "The base path or directory on the WebDAV server where your media files are located (e.g., /movies)."
+msgstr ""
+
+msgctxt "#90137"
+msgid "Click to verify if the WebDAV client can successfully connect to the configured server using the provided credentials."
+msgstr ""
