--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1857,3 +1857,7 @@ msgstr ""
 msgctxt "#90137"
 msgid "Click to verify if the WebDAV client can successfully connect to the configured server using the provided credentials."
 msgstr ""
+
+msgctxt "#90138"
+msgid "Remove Custom Addon"
+msgstr "Remove Custom Addon"
