--- a/resources/language/Portuguese (Brazil)/strings.po
+++ b/resources/language/Portuguese (Brazil)/strings.po
@@ -88,11 +88,11 @@ msgid "TMDB"
 msgstr "TMDB"
 
 msgctxt "#30102"
-msgid "TMDB Configuration:"
+msgid "TMDB Configuration"
 msgstr "Configuração do TMDB:"
 
 msgctxt "#30103"
-msgid "TMDB Api Key"
+msgid "API Key"
 msgstr "Chave da API do TMDB"
 
 msgctxt "#30104"
@@ -124,8 +124,8 @@ msgid "Client Secret"
 msgstr "Segredo do cliente"
 
 msgctxt "#30150"
-msgid "Debrid"
-msgstr "Debrid"
+msgid "Services"
+msgstr "Services"
 
 msgctxt "#30152"
 msgid "Real Debrid Configuration"
@@ -428,8 +428,8 @@ msgid "Authorize add-on to access Real-Debrid account."
 msgstr "Autorizar a extensão a acessar a conta Real-Debrid."
 
 msgctxt "#30836"
-msgid "Enable torrent-based media content. Disabling this restricts the addon to cached debrid content only."
-msgstr "Habilitar conteúdo de mídia via torrent. Desabilitar isso restringe o addon apenas ao conteúdo em cache do debrid."
+msgid "Enable torrent-based media content"
+msgstr "Habilitar conteúdo de mídia via torrent."
 
 msgctxt "#30837"
 msgid "Indicates if Real-Debrid account is linked."
@@ -516,7 +516,7 @@ msgid "Enable Zilean integration for metadata fetching."
 msgstr "Habilitar integração do Zilean para obtenção de metadados."
 
 msgctxt "#30858"
-msgid "Your TMDB API key (required for metadata)"
+msgid "Your API Key (required for metadata)"
 msgstr "Sua chave da API TMDB (necessária para metadados)."
 
 msgctxt "#30859"
@@ -529,12 +529,12 @@ msgid "Others"
 msgstr "Outros"
 
 msgctxt "#30861"
-msgid "Results"
-msgstr "Resultados"
+msgid "Filters"
+msgstr "Filters"
 
 msgctxt "#30862"
-msgid "Torrent"
-msgstr "Torrent"
+msgid "Torrent (P2P) Configuration"
+msgstr "Torrent (P2P) Configuration"
 
 msgctxt "#30863"
 msgid "Specify the torrent client"
@@ -655,3 +655,7 @@ msgstr "Idioma de destino do Deepl"
 msgctxt "#30893"
 msgid "Stremio Subtitle Configuration"
 msgstr "Configuração de legendas do Stremio"
+
+msgctxt "#90139"
+msgid "Playback"
+msgstr "Playback"
