--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -723,6 +723,26 @@ msgctxt "#30895"
 msgid "View the latest changes and updates to the addon."
 msgstr "Ver los últimos cambios y actualizaciones del complemento."
 
+msgctxt "#30896"
+msgid "Calendar"
+msgstr "Calendario"
+
+msgctxt "#30897"
+msgid "Use broadcast day adjustment"
+msgstr "Usar ajuste de día de emisión"
+
+msgctxt "#30898"
+msgid "Adjust broadcast day based on manual offset"
+msgstr "Ajustar día de emisión según desplazamiento manual"
+
+msgctxt "#30899"
+msgid "Broadcast Offset (Hours)"
+msgstr "Desplazamiento de emisión (Horas)"
+
+msgctxt "#30900"
+msgid "Manual hour adjustment for broadcast day simulation"
+msgstr "Ajuste manual de horas para simulación de emisión"
+
 msgctxt "#40000"
 msgid "Arabic (United Arab Emirates)"
 msgstr "Árabe (Emiratos Árabes Unidos)"
