feat(torbox): improve integration, fix pack resolution, and add localization
- Implemented device code authentication flow with success dialog.
- Fixed 'KeyError' in pack selection by mapping 'torrent_id' correctly.
- Resolved 'Failed to resolve source' error by using correct file IDs in packs.
- Improved 'ResolverWindow' robustness to handle resolution failures without crashing.
- Updated 'check_cached' to correctly handle dictionary responses from Torbox API.
- Added English and Spanish localization for Torbox-specific settings.
- Removed temporary debugging logs.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -771,6 +771,18 @@ msgctxt "#30910"
 msgid "Show all airing shows instead of just your watchlist/collection."
 msgstr "Show all airing shows instead of just your watchlist/collection."
 
+msgctxt "#30911"
+msgid "Your Torbox account username/email."
+msgstr "Your Torbox account username/email."
+
+msgctxt "#30912"
+msgid "Authorize add-on to access Torbox account."
+msgstr "Authorize add-on to access Torbox account."
+
+msgctxt "#30913"
+msgid "Revoke Torbox account access."
+msgstr "Revoke Torbox account access."
+
 msgctxt "#40000"
 msgid "Arabic (United Arab Emirates)"
 msgstr ""
