refactor: reorganize Stremio settings into subgroups
- Reorganized Stremio settings into four subgroups: General, Account, Addons & Catalogs, and Torrentio.
- Added localization strings for the new Stremio subgroups in English, Spanish, and Portuguese.
- Removed visibility dependencies on 'stremio_enabled' for Stremio account and addon settings to prevent intermittent settings loss when toggling Stremio.
- Fixed a typo in settings.xml where '<neading>' was used instead of '<heading>'.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -2008,3 +2008,19 @@ msgstr "Clear MDBList Cache"
 msgctxt "#90149"
 msgid "Maintenance"
 msgstr "Maintenance"
+
+msgctxt "#90150"
+msgid "Stremio: General"
+msgstr "Stremio: General"
+
+msgctxt "#90151"
+msgid "Stremio: Account"
+msgstr "Stremio: Account"
+
+msgctxt "#90152"
+msgid "Stremio: Addons & Catalogs"
+msgstr "Stremio: Addons & Catalogs"
+
+msgctxt "#90153"
+msgid "Stremio: Torrentio"
+msgstr "Stremio: Torrentio"
